--- a/img/icons/icomoon/demo-external-svg.html
+++ b/img/icons/icomoon/demo-external-svg.html
@@ -17,22 +17,7 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Vector"><use xlink:href="symbol-defs.svg#icon-Vector"></use></svg><span class="name"> icon-Vector</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-email-black-18dp-1"><use xlink:href="symbol-defs.svg#icon-email-black-18dp-1"></use></svg><span class="name"> icon-email-black-18dp-1</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-phone-black-18dp-1"><use xlink:href="symbol-defs.svg#icon-phone-black-18dp-1"></use></svg><span class="name"> icon-phone-black-18dp-1</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-person-black-18dp-1"><use xlink:href="symbol-defs.svg#icon-person-black-18dp-1"></use></svg><span class="name"> icon-person-black-18dp-1</span>
+                <svg class="icon icon-send"><use xlink:href="symbol-defs.svg#icon-send"></use></svg><span class="name"> icon-send</span>
             </div>
         </div>
   </div>
