--- a/index.html
+++ b/index.html
@@ -534,6 +534,7 @@
           </form>
         </div>
       </div>
+          <script src="./js/modal.js"></script>
     </main>
     <!-- Футер -->
     <footer class="footer">
@@ -618,11 +619,20 @@
           </ul>
         </div>
 
-        <div class="contact-us-item">
-          Подпишитесь на рассылку
+        <div class="subscription">
+          <b class="contact-us-item">Подпишитесь на рассылку</b>
+          <form class="subscription-form">
+            <input class="footer-email" type="email" name="mail" id="footer-mail" placeholder="E-mail">
+            <button class="email-btn" type="submit">
+              <span class="btn-text">Подписаться</span>
+              <svg class="icon-send" width="24" height="24">
+                <use href="./img/icons/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
-    <script src="./js/modal.js"></script>
+
   </body>
 </html>
