--- a/portfolio.html
+++ b/portfolio.html
@@ -298,66 +298,74 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-address">
-          <a class="logo" href="./index.html"><span>Web</span> Studio</a>
-          <br />
-          <span class="text text-white">
-            г. Киев, пр-т Леси Украинки, 26
-          </span>
-          <br />
-          <span>
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </span>
-          <br />
-          <span>
-            <a class="link" href="tel:380961111111">+38 096 111 11 11</a>
-          </span>
-        </div>
+      <footer class="footer">
+        <div class="container">
+          <div class="footer-address">
+            <a class="logo" href="./index.html"><span>Web</span> Studio</a>
+            <br />
+            <span class="text text-white">
+              г. Киев, пр-т Леси Украинки, 26
+            </span>
+            <br />
+            <span>
+              <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </span>
+            <br />
+            <span>
+             <a class="link" href="tel:380961111111">+38 096 111 11 11</a>
+            </span>
+          </div>
     
-        <div class="contact-us">
-          <b class="contact-us-item">присоединяйтесь</b>
-          <ul class="list menu-list">
-            <li class="social-icons-list">
-              <a href="https://www.instagram.com/" class="social-icons-footer" target="_blank" rel="noopener noreferrer"
-                aria-label="Cсылка на Инстаграм">
-                <svg class="social-icon" width="20" height="20">
-                  <use href="./img/icons/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-icons-list">
-              <a href="https://twitter.com/" class="social-icons-footer" target="_blank" rel="noopener noreferrer"
-                aria-label="Ссылка на Twitter">
-                <svg class="social-icon" width="20" height="20">
-                  <use href="./img/icons/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-icons-list">
-              <a href="https://facebook.com/" class="social-icons-footer" target="_blank" rel="noopener noreferrer"
-                aria-label="Ссылка на Facebook">
-                <svg class="social-icon" width="20" height="20">
-                  <use href="./img/icons/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li class="social-icons-list">
-            <li>
-              <a href="https://linkedin.com/" class="social-icons-footer" target="_blank" rel="noopener noreferrer"
-                aria-label="Ссылка на LinkedIn">
-                <svg class="social-icon" width="20" height="20">
-                  <use href="./img/icons/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-    
-        <div class="contact-us-item">
-          Подпишитесь на рассылку
-        </div>
-      </div>
+    <div class="contact-us">
+      <b class="contact-us-item">присоединяйтесь</b>
+      <ul class="list menu-list">
+        <li class="social-icons-list">
+          <a href="https://www.instagram.com/" class="social-icons-footer" target="_blank" rel="noopener noreferrer"
+            aria-label="Cсылка на Инстаграм">
+            <svg class="social-icon" width="20" height="20">
+              <use href="./img/icons/sprite.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-icons-list">
+          <a href="https://twitter.com/" class="social-icons-footer" target="_blank" rel="noopener noreferrer"
+            aria-label="Ссылка на Twitter">
+            <svg class="social-icon" width="20" height="20">
+              <use href="./img/icons/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-icons-list">
+          <a href="https://facebook.com/" class="social-icons-footer" target="_blank" rel="noopener noreferrer"
+            aria-label="Ссылка на Facebook">
+            <svg class="social-icon" width="20" height="20">
+              <use href="./img/icons/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li class="social-icons-list">
+        <li>
+          <a href="https://linkedin.com/" class="social-icons-footer" target="_blank" rel="noopener noreferrer"
+            aria-label="Ссылка на LinkedIn">
+            <svg class="social-icon" width="20" height="20">
+              <use href="./img/icons/sprite.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="subscription">
+      <b class="contact-us-item">Подпишитесь на рассылку</b>
+      <form class="subscription-form">
+        <input class="footer-email" type="email" name="mail" id="footer-mail" placeholder="E-mail">
+        <button class="email-btn" type="submit">
+          <span class="btn-text">Подписаться</span>
+          <svg class="icon-send" width="24" height="24">
+            <use href="./img/icons/sprite.svg#icon-send"></use>
+          </svg>
+        </button>
+      </form>
+    </div>
+    </div>
     </footer>
   </body>
 </html>
